# Strata

./: .gitignore  BoogieToGoto.lean  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DiffTestCore.lean  GettingStarted.md  LICENSE-MIT  README.md  Strata.lean  StrataCoreToGoto.lean  StrataMain.lean  StrataToCBMC.lean  StrataVerify.lean  lake-manifest.json  lakefile.toml  lean-toolchain  review_notes.md  run_cbmc.sh
.github/: CODEOWNERS  labeler.yml  pull_request_template.md
.github/workflows/: cbmc.yml  (+7 more)
Examples/: DoubleTwice.core.st  HeapReasoning.boogie.st  HeapReasoning.core.st  IrrelevantAxioms.core.st  LoopSimple.boogie.st  LoopSimple.core.st  LoopSimple.csimp.st  NondetCond.core.st  ProcedureTypeError.core.st  SafeBvOps.core.st  SarifTest.core.st  SimpleProc.boogie.st  SimpleProc.core.st  StringTest.laurel.st  TwoLoops.core.st  TypeError.boogie.st  TypeError.core.st  run_examples.sh
Scripts/: CheckImports.lean  ImportStats.lean  StrataTestMain.lean
Strata/: DDM.lean  MetaVerifier.lean  SMT.lean  SimpleAPI.lean
Tools/: fix_guard_msgs.py
Tools/Python/: .gitignore  PythonDialect.md  README.md  pyproject.toml
Tools/Python/dialects/: .gitignore  Python.dialect.st.ion
Tools/Python/scripts/: gen_dialect.sh  run_cpython_tests.sh  run_test.sh
Tools/Python/strata/: __init__.py  base.py  gen.py  python.py  pythonast.py
Tools/Python/test_results/dialects/: Python.dialect.st.ion
docs/: Architecture.md  BooleFeatureRequests.md  CoreToGOTO_Gaps.md  DDMJavaCodeGen.md  Datatypes.md  GettingStarted.md  RecursiveFunctions.md  VerificationModes.md
editors/: GenSyntax.lean
(+1918 files in other folders)
